--- a/404.html
+++ b/404.html
@@ -1,6 +1,6 @@
 <script>
   // Redirect all unknown routes back to index.html
   const path = window.location.pathname;
-  const newPath = "/app/business/root.html" + window.location.search;
+  const newPath = "/biznet/business/root.html" + window.location.search;
   window.location.replace(newPath);
 </script>
