--- a/business/root.html
+++ b/business/root.html
@@ -226,10 +226,10 @@
     <script type="module" src="../fireBase.js"></script>
      <script type="module">
         localStorage.clear()
-         import {getData,addProduct} from "../fireBase.js"
+         import {root,addProduct} from "../fireBase.js"
         var businessName,products;
         try {
-            const {userDetails,productDetails} = await getData()
+            const {userDetails,productDetails} = await root()
             businessName = userDetails.businessName
            
                 products = await Object.keys(productDetails).map(key => ({
@@ -307,4 +307,5 @@
 // window.location.replace(newPath);
 </script> 
 </body>
+
 </html>
