--- a/404.html
+++ b/404.html
@@ -1,6 +1,7 @@
 <script>
   // Redirect all unknown routes back to index.html
   const path = window.location.pathname;
+  console.log(path)
   const newPath = "/biznet/business/root.html" + window.location.search;
   window.location.replace(newPath);
 </script>
