--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
 
   setTimeout(() => {
     window.location.replace(
-      "/app/business/root.html?slug=" + slug
+      "/biznet/business/root.html?slug=" + slug
     );
   }, 500); // 0.5 second delay so logs appear
 </script>
