--- a/404.html
+++ b/404.html
@@ -1,5 +1,6 @@
 
 
+
 <script>
   console.log("404 router triggered");
   console.log("Path:", location.pathname);
@@ -9,8 +10,7 @@
 
   setTimeout(() => {
     window.location.replace(
-      "/biznet/business/root.html?slug=" + slug
-
+      "/biznet/business/index.html?slug=" + slug
     );
   }, 500); // 0.5 second delay so logs appear
 </script>
