--- a/404.html
+++ b/404.html
@@ -7,7 +7,7 @@
 
   setTimeout(() => {
     window.location.replace(
-      "/biznet/business/index.html?slug=" + slug
+      "/biznet/business/root.html?slug=" + slug
     );
   }, 500); // 0.5 second delay so logs appear
 </script>
