--- a/404.html
+++ b/404.html
@@ -7,6 +7,7 @@
 
   setTimeout(() => {
     window.location.replace(
+      localStorage.setItem("slug",slug)
       "/biznet/business/root.html?slug=" + slug
     );
   }, 500); // 0.5 second delay so logs appear
