--- a/creatInvoice.html
+++ b/creatInvoice.html
@@ -234,10 +234,7 @@
     </body>
     <script type="module" src="login.js"></script>
     <script type="module">
-            console.log("Testing")
-         var slug =  localStorage.getItem("businessSlug")
-         console.log(slug)
-          import {getData,addProduct} from "../login.js"
+          import {getData,addProduct} from "./login.js"
           
         var businessName,products;
         try {
@@ -426,3 +423,4 @@
 </body>
 
 </html>
+
