--- a/creatInvoice.html
+++ b/creatInvoice.html
@@ -232,7 +232,7 @@
         </div>
     </div>
     </body>
-    <script type="module" src="login.js"></script>
+    <script type="module" src="./login.js"></script>
     <script type="module">
           import {getData,addProduct} from "./login.js"
           
@@ -423,4 +423,5 @@
 </body>
 
 </html>
+
 
