--- a/business/root.html
+++ b/business/root.html
@@ -226,7 +226,7 @@
     <script type="module" src="../fireBase.js"></script>
      <script type="module">
          document.querySelector("#admin").addEventListener("click",()=>{
-            window.location.href = "login.html"
+            window.location.href = "../login.html"
         })
        
          import {root,addProduct} from "../fireBase.js"
@@ -312,4 +312,5 @@
 </body>
 
 </html>
+
 
