--- a/login.html
+++ b/login.html
@@ -52,8 +52,8 @@
     <script type="module" src="./fireBase.js"></script>
     <script type="module">
         import {verifyLogin,nameSlug} from "./fireBase.js"
-        var nameSlug = nameSlug();
-        console.log(nameSlug)
+        var slugData = nameSlug();
+        console.log(slugData)
         var loginBtn = document.getElementById("loginBtn");
         var email = document.getElementById("email");
         var password = document.getElementById("password");
@@ -72,6 +72,7 @@
 </body>
 
 </html>
+
 
 
 
