--- a/login.html
+++ b/login.html
@@ -57,7 +57,7 @@
         var loginBtn = document.getElementById("loginBtn");
         var email = document.getElementById("email");
         var password = document.getElementById("password");
-        email.value = nameSlug
+        email.value = slugData
         loginBtn.addEventListener("click",()=>{
             if(email.value == "" && password.value == ""){
                 alert("Empty Fields")
@@ -72,6 +72,7 @@
 </body>
 
 </html>
+
 
 
 
