--- a/business/root.html
+++ b/business/root.html
@@ -225,7 +225,9 @@
     </div>
     <script type="module" src="../fireBase.js"></script>
      <script type="module">
-       
+                document.querySelector("#admin").addEventListener("click",()=>{
+            window.location.href = "../login.html"
+        })
          import {root,addProduct} from "../fireBase.js"
         var businessName,products;
         try {
@@ -309,6 +311,7 @@
 </body>
 
 </html>
+
 
 
 
