--- a/business/root.html
+++ b/business/root.html
@@ -225,11 +225,12 @@
     </div>
     <script type="module" src="../fireBase.js"></script>
      <script type="module">
-                document.querySelector("#admin").addEventListener("click",()=>{
-            window.location.href = "../login.html"
-        })
+
          import {root,addProduct} from "../fireBase.js"
         var businessName,products;
+              document.querySelector("#admin").addEventListener("click",()=>{
+            window.location.href = "../login.html?=businessName"
+        })
         try {
             const {userDetails,productDetails} = await root()
             businessName = userDetails.businessName
@@ -311,6 +312,7 @@
 </body>
 
 </html>
+
 
 
 
