--- a/business/root.html
+++ b/business/root.html
@@ -229,7 +229,7 @@
          import {root,addProduct} from "../fireBase.js"
         var businessName,products;
               document.querySelector("#admin").addEventListener("click",()=>{
-            window.location.href = "../login.html?=businessName"
+            window.location.href = "../login.html"
         })
         try {
             const {userDetails,productDetails} = await root()
@@ -312,6 +312,7 @@
 </body>
 
 </html>
+
 
 
 
