--- a/addProduct.html
+++ b/addProduct.html
@@ -147,7 +147,7 @@
     <div class="body">
         <div class="mainbody">
             <h3>Add Product</h3>
-            <img id="imagePreview" accept="png,jpg,jpeg" src="/images/add item.svg" alt="">
+            <img id="imagePreview" accept="png,jpg,jpeg" src="images/add item.svg" alt="">
             <input type="file" id="imagePicker">
             <input id="product" type="text" placeholder="Product" value="">
             <input id="price" type="number" placeholder="Price &#8358;" value="">
@@ -273,3 +273,4 @@ async function submitProduct(data) {
 </body>
 
 </html>
+
