--- a/creatInvoice.html
+++ b/creatInvoice.html
@@ -198,9 +198,9 @@
                 <div class="priceCard">
                     <h3>&#8358;</h3>
                     <input type="number" placeholder="Price" id="price" value="">
-                    <img id="minu_quantity" src="/images/add item.svg" alt="">
+                    <img id="minu_quantity" src="images/add item.svg" alt="">
                     <h4 id="quantity">0</h4>
-                    <img class="add_quantity" id="add_quantity" src="/images/add invoice.svg" alt="">
+                    <img class="add_quantity" id="add_quantity" src="images/add invoice.svg" alt="">
                 </div>
                 <div class="sum">
                     <h4>Total:</h4>
@@ -423,5 +423,6 @@
 </body>
 
 </html>
+
 
 
