--- a/dashboard.html
+++ b/dashboard.html
@@ -199,17 +199,17 @@
                 <img src="/images/E-T (1).png" alt="">
             </div>
             <div class="menu_list">
-                    <li id="goToProduct"><img src="/images/shopping cart.svg" alt="">Products</li>
-                    <li id="goToInvoice"><img src="/images/receipt.svg" alt="">Invoice</li>
-                    <li id="goToStore"><img src="/images/business center.svg" alt="">My Store</li>
-                    <li id="goToProfile"><img src="/images/settings.svg" alt="">Profile</li>
-                    <li id="whatsApp"><img src="/images/whatsapp-brands-solid-full.svg" alt="">WhatsApp Link</li>
-                    <li id="goToDeveloper"><img src="/images/payments.svg" alt="">Developer</li>
+                    <li id="goToProduct"><img src="images/shopping cart.svg" alt="">Products</li>
+                    <li id="goToInvoice"><img src="images/receipt.svg" alt="">Invoice</li>
+                    <li id="goToStore"><img src="images/business center.svg" alt="">My Store</li>
+                    <li id="goToProfile"><img src="images/settings.svg" alt="">Profile</li>
+                    <li id="whatsApp"><img src="images/whatsapp-brands-solid-full.svg" alt="">WhatsApp Link</li>
+                    <li id="goToDeveloper"><img src="images/payments.svg" alt="">Developer</li>
                 </div>
         </div>
         <div class="header_section">
-            <img id="openMenu" class="menu" src="/images/menu.svg" alt="">
-            <img id="img" class="logo" src="/images/E-T (1).png" alt="">
+            <img id="openMenu" class="menu" src="images/menu.svg" alt="">
+            <img id="img" class="logo" src="images/E-T (1).png" alt="">
             <h2></h2>
         </div>
         <div class="main_body">
@@ -227,7 +227,7 @@
          <div class="display_body">
                 <div class="add_product">
                     <div class="btn_wrapper">
-                        <button class="btn"><img  src="/images/add item.svg" alt=""> Add Product</button>
+                        <button class="btn"><img  src="images/add item.svg" alt=""> Add Product</button>
                     </div>
                     <div class="table">
                         <table id="table">
@@ -333,4 +333,5 @@
     </script>
   
 </body>
+
 </html>
