--- a/dashboard.html
+++ b/dashboard.html
@@ -194,9 +194,9 @@
     <div class="body">
         <div id="menu_bar" class="menu_bar">
             <div class="menu_bar_header">
-                <img id="closeMenu" src="/images/close menu.svg" alt="">
-                <h2>E-tech software</h2>
-                <img src="/images/E-T (1).png" alt="">
+                <img id="closeMenu" src="images/close menu.svg" alt="">
+                <h2></h2>
+                <img src="images/E-T (1).png" alt="">
             </div>
             <div class="menu_list">
                     <li id="goToProduct"><img src="images/shopping cart.svg" alt="">Products</li>
@@ -335,3 +335,4 @@
 </body>
 
 </html>
+
