--- a/addProduct.html
+++ b/addProduct.html
@@ -163,7 +163,7 @@
                 <span>Adding Product....</span>
              </div>
               <div id="successCard" class="success">
-                <img src="/images/checked.svg" alt="">
+                <img src="images/checked.svg" alt="">
                 <span>Successful</span>
                 <button id="dismiss"> Dismiss</button>
              </div>
@@ -273,4 +273,5 @@ async function submitProduct(data) {
 </body>
 
 </html>
+
 
