--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
   <div class="main_container">
     <div class="header">
         <li>Menu</li>
-         <img src="/images/E-T (1).png" alt="">
+         <img src="images/E-T (1).png" alt="">
         <li>Log In</li>
     </div>
     <div class="body">
@@ -219,30 +219,30 @@
                 <h2>Professional Invoice Examples</h2>
                 <div class="scrollImg">
                   <div class="image">
-                    <img class="img" src="/images/Screenshot 2025-11-26 223212.png" alt="">
-                     <img  class="img" src="/images/Screenshot 2025-11-26 223212.png" alt="">
-                      <img class="img" src="/images/Screenshot 2025-11-26 223212.png" alt="">
-                       <img class="img" src="/images/Screenshot 2025-11-26 223212.png" alt="">
+                    <img class="img" src="images/Screenshot 2025-11-26 223212.png" alt="">
+                     <img  class="img" src="images/Screenshot 2025-11-26 223212.png" alt="">
+                      <img class="img" src="images/Screenshot 2025-11-26 223212.png" alt="">
+                       <img class="img" src="images/Screenshot 2025-11-26 223212.png" alt="">
                   </div>
                    <div aria-hidden class="image">
-                    <img class="img" src="/images/Screenshot 2025-11-26 223212.png" alt="">
-                     <img  class="img" src="/images/Screenshot 2025-11-26 223212.png" alt="">
-                      <img class="img" src="/images/Screenshot 2025-11-26 223212.png" alt="">
-                       <img class="img" src="/images/Screenshot 2025-11-26 223212.png" alt="">
+                    <img class="img" src="images/Screenshot 2025-11-26 223212.png" alt="">
+                     <img  class="img" src="images/Screenshot 2025-11-26 223212.png" alt="">
+                      <img class="img" src="images/Screenshot 2025-11-26 223212.png" alt="">
+                       <img class="img" src="images/Screenshot 2025-11-26 223212.png" alt="">
  
                   </div>
                    <div aria-hidden class="image">
-                    <img class="img" src="/images/Screenshot 2025-11-26 223212.png" alt="">
-                     <img  class="img" src="/images/Screenshot 2025-11-26 223212.png" alt="">
-                      <img class="img" src="/images/Screenshot 2025-11-26 223212.png" alt="">
-                       <img class="img" src="/images/Screenshot 2025-11-26 223212.png" alt="">
+                    <img class="img" src="images/Screenshot 2025-11-26 223212.png" alt="">
+                     <img  class="img" src="images/Screenshot 2025-11-26 223212.png" alt="">
+                      <img class="img" src="images/Screenshot 2025-11-26 223212.png" alt="">
+                       <img class="img" src="images/Screenshot 2025-11-26 223212.png" alt="">
  
                   </div>
                    <div aria-hidden class="image">
-                    <img class="img" src="/images/Screenshot 2025-11-26 223212.png" alt="">
-                     <img  class="img" src="/images/Screenshot 2025-11-26 223212.png" alt="">
-                      <img class="img" src="/images/Screenshot 2025-11-26 223212.png" alt="">
-                       <img class="img" src="/images/Screenshot 2025-11-26 223212.png" alt="">
+                    <img class="img" src="images/Screenshot 2025-11-26 223212.png" alt="">
+                     <img  class="img" src="images/Screenshot 2025-11-26 223212.png" alt="">
+                      <img class="img" src="images/Screenshot 2025-11-26 223212.png" alt="">
+                       <img class="img" src="images/Screenshot 2025-11-26 223212.png" alt="">
  
                   </div>
                    
@@ -306,5 +306,6 @@
 </body>
 
 </html>
+
 
 
