--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
                   
                     </p>
                     <div class="headerbtn">
-                        <button id = "register">Register A Business</button>
+                        <button id = "registerBtn">Register A Business</button>
                         <button>Browse Samples</button>
                     </div>
             </div>
@@ -290,9 +290,9 @@
   </div>
     <script type="module" src="../fireBase.js"></script>
     <script type="module">
-        document.querySelector("#register").addEventListener("click",()=>{
-            window.location.href = "registerBusiness.html"
-        })
+  document.querySelector("#registerBtn").addEventListener("click",()=>{
+      window.location.href = "registerBusiness.html"
+    })
         localStorage.clear()
          import {getData,addProduct} from "../fireBase.js"
         var businessName,products;
@@ -309,6 +309,7 @@
 </body>
 
 </html>
+
 
 
 
