--- a/index.html
+++ b/index.html
@@ -291,6 +291,7 @@
     <script type="module" src="../fireBase.js"></script>
     <script type="module">
   document.querySelector("#registerBtn").addEventListener("click",()=>{
+      alert("Loading")
       window.location.href = "registerBusiness.html"
     })
         localStorage.clear()
@@ -309,6 +310,7 @@
 </body>
 
 </html>
+
 
 
 
