--- a/index.html
+++ b/index.html
@@ -288,10 +288,9 @@
             </div>
         </div>
   </div>
-    <script type="module" src="../fireBase.js"></script>
+    <script type="module" src="./fireBase.js"></script>
     <script type="module">
   document.querySelector("#registerBtn").addEventListener("click",()=>{
-      alert("Loading")
       window.location.href = "registerBusiness.html"
     })
         localStorage.clear()
@@ -310,6 +309,7 @@
 </body>
 
 </html>
+
 
 
 
