--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
       window.location.href = "registerBusiness.html"
     })
         localStorage.clear()
-         import {getData,addProduct} from "../fireBase.js"
+         import {getData,addProduct} from "./fireBase.js"
         var businessName,products;
         try {
             const {userDetails,productDetails} = await getData()
@@ -309,6 +309,7 @@
 </body>
 
 </html>
+
 
 
 
