--- a/registerBusiness.html
+++ b/registerBusiness.html
@@ -295,7 +295,7 @@
 
 
         //Check if account exist
-    var bucketFile = businessName.value
+    var bucketFile = bizName.value
         bucketFile = bucketFile.replace(" ","");
 
     // send file to appwrite
@@ -373,3 +373,4 @@ function planActive(plan){
 </body>
 
 </html>
+
