--- a/registerBusiness.html
+++ b/registerBusiness.html
@@ -307,6 +307,7 @@
         if(userBucket.exists()){
              console.log(userBucket)
              console.log(userBucket.val())
+             console.log(bucketFile)
             //userExists(userBucket.val())
         }else{
             const client = new Appwrite.Client()
@@ -376,6 +377,7 @@ function planActive(plan){
 </body>
 
 </html>
+
 
 
 
