--- a/registerBusiness.html
+++ b/registerBusiness.html
@@ -169,7 +169,7 @@
         var successImg = document.getElementById("loaderImg");
         var spanLoader = document.querySelector(".span")
         var bucketFile = bizName.value
-        bucketFile = bucketFile.replace(" ","");
+        console.log(bucketFile)
         
         var logoUrl;
         var globalFile;
@@ -373,6 +373,7 @@ function planActive(plan){
 </body>
 
 </html>
+
 
 
 
