--- a/registerBusiness.html
+++ b/registerBusiness.html
@@ -370,7 +370,7 @@ function planActive(plan){
         
 function cleanText(text) {
   var textCleaned = text.replace(/[^a-zA-Z0-9]/g, "");
-     return textCleaned.toString.toLoWerCase()
+     return textCleaned.toLowerCase()
 }
 
 cleanText("My Business @ Name!"); 
@@ -381,6 +381,7 @@ cleanText("My Business @ Name!");
 </body>
 
 </html>
+
 
 
 
