--- a/business/root.html
+++ b/business/root.html
@@ -245,6 +245,7 @@
 
         } catch (error) {
             console.log(error)
+            console.log("This")
         }
 
         //shuffle Array 
@@ -312,6 +313,7 @@
 </body>
 
 </html>
+
 
 
 
