--- a/dashboard.html
+++ b/dashboard.html
@@ -264,7 +264,7 @@
         })
          document.querySelector("#goToStore").addEventListener("click",() => {
              var slugName = nameSlug()
-            window.location.href = "./business/index.html?slug=" + slugName
+            window.location.href = "./business/index.html/" + slugName
         })
         document.querySelector("#goToProfile").addEventListener("click",() => {
             window.location.href = "productListPage.html"
@@ -337,6 +337,7 @@
 </body>
 
 </html>
+
 
 
 
