--- a/dashboard.html
+++ b/dashboard.html
@@ -264,6 +264,7 @@
         })
          document.querySelector("#goToStore").addEventListener("click",() => {
              var slugName = nameSlug()
+             alert("done")
             window.location.href = "./business/index.html/" + slugName
         })
         document.querySelector("#goToProfile").addEventListener("click",() => {
@@ -337,6 +338,7 @@
 </body>
 
 </html>
+
 
 
 
