--- a/productListPage.html
+++ b/productListPage.html
@@ -339,7 +339,7 @@
             email.textContent = userDetails.email
             addres.textContent = userDetails.businessAddress
             website.textContent = userDetails.website
-            web.textContent = userDetails.website
+            web.textContent = "https://e-tech-software.github.io/biznet/" + 
             slogan.textContent = userDetails.businessSlogan
             whatsapp.textContent = userDetails.contact
             contact.textContent = userDetails.contact
@@ -379,3 +379,4 @@
 </body>
 
 </html>
+
