--- a/registerBusiness.html
+++ b/registerBusiness.html
@@ -268,7 +268,7 @@
                 contact:bizPhone.value,
                 email:bizEmail.value,
                 password:logIn.value,
-                website:"etect-software.com/" + bizName.value,
+                website:"https://e-tech-software.github.io/biznet/" + bizName.value.replace(/[^a-zA-Z0-9]/g, "").toLowerCase();
                 facebook:bizFacebook.value,
                 plan:"",
                 paymentDate:"",
@@ -381,6 +381,7 @@ cleanText("My Business @ Name!");
 </body>
 
 </html>
+
 
 
 
