--- a/registerBusiness.html
+++ b/registerBusiness.html
@@ -269,7 +269,7 @@
                 contact:bizPhone.value,
                 email:bizEmail.value,
                 password:logIn.value,
-                website:"https://e-tech-software.github.io/biznet/" + webAddress.replace(/[^a-zA-Z0-9]/g, "").toLowerCase();
+                website:"https://e-tech-software.github.io/biznet/" + webAddress.replace(/[^a-zA-Z0-9]/g, "").toLowerCase(),
                 facebook:bizFacebook.value,
                 plan:"",
                 paymentDate:"",
@@ -382,6 +382,7 @@ cleanText("My Business @ Name!");
 </body>
 
 </html>
+
 
 
 
