--- a/plan.html
+++ b/plan.html
@@ -262,6 +262,7 @@
         </div>
         <script src="./fireBase.js" type="module"></script>
     <script type="module">
+        import {updatePayment} from "./fireBase.js"
         var monthlyPlanBtn = document.getElementById("monthlyPlan")
          var yearlyPlanBtn = document.getElementById("YearlyPlan")
           var lifeTimePlan = document.getElementById("lifetimePlan")
@@ -396,4 +397,5 @@ function processPayment(plan){
 </body>
 
 </html>
+
 
