--- a/plan.html
+++ b/plan.html
@@ -299,8 +299,8 @@
         apiKey: "MK_TEST_MV1Y3NXE78", 
         contractCode: "8678424030",
 
-        customerName: client.ceo
-        customerEmail: client.bizEmail,
+        customerName: "client.ceo",
+        customerEmail: "client.email",
 
         paymentDescription: "Payment for services",
 
@@ -385,6 +385,7 @@ function processPayment(plan){
 </body>
 
 </html>
+
 
 
 
