--- a/plan.html
+++ b/plan.html
@@ -299,8 +299,8 @@
         apiKey: "MK_TEST_MV1Y3NXE78", 
         contractCode: "8678424030",
 
-        customerName: "client.ceo",
-        customerEmail: "client.email",
+        customerName: client.ceo,
+        customerEmail: client.email,
 
         paymentDescription: "Payment for services",
 
@@ -389,6 +389,7 @@ function processPayment(plan){
 </body>
 
 </html>
+
 
 
 
