--- a/plan.html
+++ b/plan.html
@@ -381,14 +381,15 @@ function processPayment(plan){
      
 }
         payment.addEventListener("click",()=>{
-            console.log(client)
-            pay(plan)
+            console.log(client.email)
+            pay()
         })
 
     </script>
 </body>
 
 </html>
+
 
 
 
