--- a/plan.html
+++ b/plan.html
@@ -381,6 +381,7 @@ function processPayment(plan){
      
 }
         payment.addEventListener("click",()=>{
+            console.log(client)
             console.log(client.email)
             pay()
         })
@@ -389,6 +390,7 @@ function processPayment(plan){
 </body>
 
 </html>
+
 
 
 
