--- a/plan.html
+++ b/plan.html
@@ -381,7 +381,7 @@ function processPayment(plan){
      
 }
         payment.addEventListener("click",()=>{
-            console.log(client)
+            console.log(client.val())
             console.log(client.email)
             pay()
         })
@@ -390,6 +390,7 @@ function processPayment(plan){
 </body>
 
 </html>
+
 
 
 
