--- a/plan.html
+++ b/plan.html
@@ -263,7 +263,8 @@
         <script src="./fireBase.js" type="module"></script>
     <script type="module">
         import {updatePayment,fetchData} from "./fireBase.js"
-        var client = fetchData()
+        var client = await fetchData()
+        
         var monthlyPlanBtn = document.getElementById("monthlyPlan")
          var yearlyPlanBtn = document.getElementById("YearlyPlan")
           var lifeTimePlan = document.getElementById("lifetimePlan")
@@ -390,6 +391,7 @@ function processPayment(plan){
 </body>
 
 </html>
+
 
 
 
