--- a/plan.html
+++ b/plan.html
@@ -311,14 +311,17 @@
 
             if (response.paymentReference === paymentReference &&
                 response.paymentStatus === "PAID") {
+                
 
                              // we are suppose to call monnify api function then the moniffy function calls
                             //the updatePayment function
-                             var res =  updatePayment({
+                             var res = await updatePayment({
                                 plan:plan,
                                 paymentDate:paymentDate,
                                 expireDate:expireDate
                              });
+                alert("Payment Done")
+                                console.log(res)
                                   if(res == "Successful"){
                                     setTimeout(()=>{
                                         window.location.href = "dashboard.html"
@@ -390,6 +393,7 @@ function processPayment(plan){
 </body>
 
 </html>
+
 
 
 
