--- a/plan.html
+++ b/plan.html
@@ -289,7 +289,7 @@
           pop.classList.add("show")
         })
         
-   async function pay(amount,plan) {
+ function pay(amount,plan) {
 
     let paymentReference = "REF-" + Date.now();   // unique reference
 
@@ -392,6 +392,7 @@ function processPayment(plan){
 </body>
 
 </html>
+
 
 
 
