--- a/business/root.html
+++ b/business/root.html
@@ -43,7 +43,7 @@
         }
         .headerDetails button{
             padding: 5px 25px;
-            font-size: 1rem;
+            font-size: 0.8rem;
             color:white;
             background-color: rgb(212, 97, 97);
             border: none;
@@ -171,7 +171,7 @@
             <div class="headerDetails">
                 <h4 id="bizName">Adiddas Online Store</h4>
                 <p id="bizSlogan">All you need at the click of a button</p>
-                <button id="admin">Admin Log In Panel</button>
+                <button id="admin">Admin Panel</button>
             </div>
             <div class="headerImage">
                 <img id="bizlogo" src="" alt="">
@@ -313,6 +313,7 @@
 </body>
 
 </html>
+
 
 
 
