--- a/productListPage.html
+++ b/productListPage.html
@@ -21,7 +21,7 @@
         .header h1{
             align-self: center;
             text-transform: uppercase;
-            background:linear-gradient(rgba(87, 86, 86, 0.212)), url(/images/background.jpg);
+            background:linear-gradient(rgba(87, 86, 86, 0.212)), url(images/background.jpg);
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
@@ -380,6 +380,7 @@
 </body>
 
 </html>
+
 
 
 
