--- a/creatInvoice.html
+++ b/creatInvoice.html
@@ -6,6 +6,7 @@
      <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+     <script src="./widthCheck.js"></script>
 </head>
 <body>
     <style>
@@ -423,6 +424,7 @@
 </body>
 
 </html>
+
 
 
 
