--- a/business/root.html
+++ b/business/root.html
@@ -231,7 +231,7 @@
 
          import {root,addProduct} from "../fireBase.js"
 
-         import { showLoader, hideLoader } from "../loader.js";
+         import { showLoader, hideLoader } from "../export.js";
 
                 // Inject loader HTML immediately
                 (async function () {
@@ -336,6 +336,7 @@
 </body>
 
 </html>
+
 
 
 
