--- a/productListPage.html
+++ b/productListPage.html
@@ -200,6 +200,7 @@
         }
     </style>
     <div class="body">
+         <div id="loader-container"></div>
         <div class="header">
             <h1 id="businessName">E-tech software</h1>
             <div class="logo"><img id="logo" src="/images/E-T (1).png" alt=""></div>
@@ -380,6 +381,7 @@
 </body>
 
 </html>
+
 
 
 
