--- a/productListPage.html
+++ b/productListPage.html
@@ -75,7 +75,8 @@
         }
         #web{
             margin-top: -8px;
-            padding-left: 20px;
+            padding-left: 5px;
+            align-self:center;
         }
         .main_body{
             display: flex;
@@ -402,6 +403,7 @@
 </body>
 
 </html>
+
 
 
 
