--- a/productListPage.html
+++ b/productListPage.html
@@ -77,6 +77,7 @@
             margin-top: -8px;
             padding-left: 5px;
             align-self:center;
+            font-size:0.5rem;
         }
         .main_body{
             display: flex;
@@ -403,6 +404,7 @@
 </body>
 
 </html>
+
 
 
 
