--- a/creatInvoice.html
+++ b/creatInvoice.html
@@ -183,12 +183,11 @@
 
     </style>
     <body class="bod">
-        
+         <div id="loader-container"></div>
     
     <div class="mainBody">
         <div class="head">
             <h2>Generate Invoice</h2>
-            <h3>Invoices</h3>
         </div>
         <div class="body">
             <div class="cardDisplay">
@@ -440,6 +439,7 @@
 </body>
 
 </html>
+
 
 
 
